--- a/Layouts/TelaPlay.uistate.xml
+++ b/Layouts/TelaPlay.uistate.xml
@@ -5,10 +5,10 @@ It is entirely optional and the project will load without it.  If you are placin
 you probably do not want to add any .uistate.xml files to the repository.-->
     <camera>
         <position-x>360</position-x>
-        <position-y>624.605</position-y>
-        <position-z>193.261</position-z>
+        <position-y>595.343</position-y>
+        <position-z>194.872</position-z>
         <lookat-x>360</lookat-x>
-        <lookat-y>624.605</lookat-y>
+        <lookat-y>595.343</lookat-y>
         <lookat-z>0</lookat-z>
     </camera>
     <snap-to-grid>0</snap-to-grid>
@@ -23,9 +23,8 @@ you probably do not want to add any .uistate.xml files to the repository.-->
         <property expanded="0" name="Margins" />
         <property expanded="1" name="Effects" />
     </properties>
-    <active-layer name="Logo" />
+    <active-layer name="Layer 0" />
     <layers>
-        <layer locked="1" name="Fundo" parallax-in-editor="0" visible="1" />
-        <layer locked="0" name="Logo" parallax-in-editor="0" visible="1" />
+        <layer locked="0" name="Layer 0" parallax-in-editor="0" visible="1" />
     </layers>
 </c2uistate>
