--- a/Layouts/TelaPlay.xml
+++ b/Layouts/TelaPlay.xml
@@ -31,7 +31,7 @@
             <instances>
                 <instance type="Text" uid="5">
                     <properties>
-                        <text>Teodoro Gay</text>
+                        <text>Rolezins Gay</text>
                         <initial-visibility>Visible</initial-visibility>
                         <font>Arial,-96,400,0</font>
                         <color>0,0,0</color>
