--- a/Layouts/TelaPlay.xml
+++ b/Layouts/TelaPlay.xml
@@ -66,8 +66,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>360</x>
-                        <y>1040</y>
+                        <x>320</x>
+                        <y>680</y>
                         <z>0</z>
                         <width>536.578979492</width>
                         <height>204.674453735</height>
@@ -76,6 +76,30 @@
                         <hotspotY>0.5</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
+                    </world>
+                </instance>
+                <instance type="botaoStart2" uid="11">
+                    <properties>
+                        <type>Button</type>
+                        <text>INICIE AQUI</text>
+                        <tooltip></tooltip>
+                        <initial-visibility>Visible</initial-visibility>
+                        <enabled>Yes</enabled>
+                        <auto-font-size>Yes</auto-font-size>
+                        <id-optional></id-optional>
+                        <checked>No</checked>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>120</x>
+                        <y>960</y>
+                        <z>0</z>
+                        <width>536.656311035</width>
+                        <height>178.885437012</height>
+                        <depth>0</depth>
+                        <hotspotX>0</hotspotX>
+                        <hotspotY>0</hotspotY>
                     </world>
                 </instance>
             </instances>
