--- a/Layouts/TabuleiroPORRA.xml
+++ b/Layouts/TabuleiroPORRA.xml
@@ -169,6 +169,30 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
+                <instance type="REINICIARMAYCON" uid="12">
+                    <properties>
+                        <type>Button</type>
+                        <text>REINICIAR O MAYCON</text>
+                        <tooltip></tooltip>
+                        <initial-visibility>Visible</initial-visibility>
+                        <enabled>Yes</enabled>
+                        <auto-font-size>Yes</auto-font-size>
+                        <id-optional></id-optional>
+                        <checked>Yes</checked>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>288</x>
+                        <y>496</y>
+                        <z>0</z>
+                        <width>396.333190918</width>
+                        <height>132.111068726</height>
+                        <depth>0</depth>
+                        <hotspotX>0</hotspotX>
+                        <hotspotY>0</hotspotY>
+                    </world>
+                </instance>
             </instances>
             <effects />
         </layer>
